# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

declare_args() {
  moltenvk_ios_prebuilt_a =
      "//third_party/MoltenVK/prebuilt/ios/libMoltenVK.a"
  moltenvk_iossim_prebuilt_a =
      "//third_party/MoltenVK/prebuilt/iossim/libMoltenVK.a"
  moltenvk_ios_build_enabled = true
  moltenvk_ios_rebuild_stamp = ""
}

# Per-toolchain pool only; cross-toolchain serialization is in build_moltenvk_ios.sh.
pool("moltenvk_build_pool") {
  depth = 1
}

# Stamp file only when build enabled or stamp non-empty
_moltenvk_stamp_file =
    "${root_build_dir}/build_configs/moltenvk_ios_rebuild_stamp.txt"
write_file(_moltenvk_stamp_file, moltenvk_ios_rebuild_stamp)

_moltenvk_root = "//third_party/MoltenVK"
_moltenvk_root_rebased = rebase_path(_moltenvk_root, root_build_dir)
_build_flag = "0"
if (moltenvk_ios_build_enabled) {
  _build_flag = "1"
}

# Determine target type and prebuilt path based on build config
if (use_ios_simulator) {
  _target_type = "simulator"
  _prebuilt_path = moltenvk_iossim_prebuilt_a
} else {
  _target_type = "device"
  _prebuilt_path = moltenvk_ios_prebuilt_a
}

# Empty stamp must not be passed as "" — ninja/shell drops empty argv and shifts
# TARGET_TYPE / BUILD_ENABLED (see build_moltenvk_ios.sh).
_moltenvk_rebuild_stamp_arg = moltenvk_ios_rebuild_stamp
if (_moltenvk_rebuild_stamp_arg == "") {
  _moltenvk_rebuild_stamp_arg = "-"
}

action("moltenvk_build") {
  script = "//third_party/MoltenVK/build_moltenvk_ios.sh"
  inputs = [
    "//third_party/MoltenVK/build_moltenvk_ios.sh",
    "//third_party/MoltenVK/build_external_deps_only.sh",
    "//third_party/MoltenVK/Makefile",
    _moltenvk_stamp_file,
  ]
  outputs = [ "${target_gen_dir}/libMoltenVK.a" ]
  args = [
    _moltenvk_root_rebased,
    rebase_path("${target_gen_dir}/libMoltenVK.a", root_build_dir),
    _moltenvk_rebuild_stamp_arg,
    _build_flag,
    rebase_path(_prebuilt_path, root_build_dir),
    _target_type,
    current_cpu,
  ]
  pool = ":moltenvk_build_pool"
}

config("moltenvk_public_config") {
  include_dirs = [
    "//third_party/MoltenVK/MoltenVK/MoltenVK/API",
  ]
}

ohos_prebuilt_static_library("moltenvk") {
  source = get_label_info(":moltenvk_build", "target_gen_dir") + "/libMoltenVK.a"
  output = "libMoltenVK.a"
  deps = [ ":moltenvk_build" ]
  public_configs = [ ":moltenvk_public_config" ]
  part_name = "build_framework"
  subsystem_name = "build"
}

group("moltenvk_deps") {
  public_deps = [ ":moltenvk" ]
}
